fixed projects section on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,7 @@ header {
     box-shadow: var(--box-shadow);
 } 
 
+
 .projects-title {
     color: var(--clr-extra);
     font-size: var(--fs-h2);
@@ -286,6 +287,7 @@ header {
     align-items: center;
 }
 
+
 .project-img {
     width: 50%;
     margin-right: 2em;
@@ -297,6 +299,24 @@ header {
 }
 
 
+@media(max-width:750px) {
+    .project{
+        flex-direction: column;
+        margin: 1em 0;
+    }
+
+    .project-img {
+        width: 90%;
+        margin: 0;
+    }
+
+    .project-text {
+        width: 90%;
+        margin-top: 1em;
+        text-align: center;
+    }
+
+}
 
 
 
